# http-prover

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile.toml  README.md
.github/workflows/: ci.yml  publish.yml
cairo1-compile/src/: main.rs
common/: Cargo.toml
common/src/: cairo0_prover_input.rs  cairo_prover_input.rs  lib.rs  models.rs  requests.rs
common/src/prover_input/: cairo.rs  cairo0.rs  mod.rs  pie.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs  models.rs  requests.rs
crates/common/src/inputs/: cairo_0_prover_input.rs  cairo_1_prover_input.rs  mod.rs
crates/podman/: Cargo.toml
crates/podman/src/: lib.rs  process.rs  runner.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs  shutdown.rs
examples/Cairo/: fibonacci.cairo  fibonacci_prover_input.json  input.json
examples/cairo/: fibonacci_compiled.json
examples/cairo0/: fibonacci.cairo  fibonacci_compiled.json
prover/: Cargo.toml  README.md  authorized_keys.json
prover-sdk/: Cargo.toml  README.md
prover-sdk/src/: access_key.rs  errors.rs  lib.rs  load.rs  prove_sdk_builder.rs  prover_sdk.rs  sdk.rs  sdk_builder.rs
prover-sdk/tests/: auth_test.rs  prove_test.rs  register_test.rs  sdk_test.rs  verify_test.rs
prover-sdk/tests/helpers/: mod.rs
prover/resources/: input.json  input_cairo0.json  input_cairo1.json  proof.json
prover/src/: errors.rs  lib.rs  main.rs  server.rs  sse.rs  verifier.rs
prover/src/auth/: auth_errors.rs  authorizer.rs  jwt.rs  mod.rs  nonce.rs  register.rs  validation.rs
prover/src/cairo1_run/: mod.rs  run.rs  runner_error.rs
prover/src/cert/: cert_menager.rs  create_jws.rs  dns_menagment.rs  mod.rs  types.rs
prover/src/extractors/: workdir.rs
prover/src/https/: challenger.rs  mod.rs  models.rs
prover/src/prove/: bootloader.rs  cairo.rs  cairo0.rs  cairo0_prove.rs  cairo1.rs  cairo1_prove.rs  cairo_0_prover_input.rs  cairo_1_prover_input.rs  errors.rs  merger.rs  mod.rs  models.rs  pie.rs  prove_input.rs  state_diff_commitment.rs
prover/src/threadpool/: mod.rs  prove.rs  run.rs
prover/src/utils/: config.rs  job.rs  mod.rs  proof_parser.rs  shutdown.rs
scripts/: 0-venv.sh  1-compile.sh  2-merge.sh  combine_json.py  corelib_install.sh  e2e_test.sh
sdk/: Cargo.toml
sdk/src/: access_key.rs  errors.rs  lib.rs  load.rs  models.rs  prove_sdk_builder.rs  prover_sdk.rs
sdk/tests/: common.rs  integration_test.rs
