[workspace]
resolver = "2"
members = [
    "bin/cairo-prove",
    "bin/keygen",
    "bin/register",
    "crates/common",
    "crates/utils",
    "prover",
    "prover-sdk",
    "cairo1-compile",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
axum = { version = "0.7.5", features = ["http2", "macros", "multipart", "ws"] }
bytes = "1.4.0"
cairo-proof-parser = { git = "https://github.com/cartridge-gg/cairo-proof-parser.git" }
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive", "env"] }
common = { path = "crates/common" }
curve25519-dalek = "4.1.2"
ed25519-dalek = { version = "2.1.1", features = ["rand_core", "serde"] }
http = "1.1.0"
hyper-util = "0.1.3"
jsonwebtoken = "9.3.0"
lazy_static = "1.4.0"
prefix-hex = "0.7.1"
prover = { path = "prover" }
prover-sdk = { path = "prover-sdk" }
rand = "0.8.5"
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
reqwest_cookie_store = "0.7.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.116"
serde_with = "3.8.1"
thiserror = "1.0.57"
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = [
    "limit",
    "timeout",
    "trace",
    "decompression-br",
    "set-header",
    "cors",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = { version = "2.5.0", features = ["serde"] }
utils = { path = "crates/utils" }
config-generator = { git = "https://github.com/piotr-stec/genereate-config.git" }
cairo-lang-compiler = { git = "https://github.com/starkware-libs/cairo", tag = "v2.7.0-rc.3", default-features = false }
cairo-lang-sierra = { git = "https://github.com/starkware-libs/cairo", tag = "v2.7.0-rc.3", default-features = false }