[workspace]
resolver = "2"
members = [
    "prover",
    "common",
    "prover-sdk",
    "bin/cairo-prove",
    "bin/keygen",
    "bin/register",
]
[workspace.package]
version = "0.1.0"
edition = "2021"
[workspace.dependencies]
axum = { version = "0.7.5", features = ["http2", "macros", "multipart", "ws"] }
clap = { version = "4.5.16", features = ["derive", "env"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tokio = { version = "1.39.3", features = ["full"] }
thiserror = "1.0.63"
serde_json = "1.0.127"
tempfile = "3.12.0"
serde = { version = "1.0.209", features = ["derive"] }
common = { path = "common" }
prover-sdk = { path = "prover-sdk" }
reqwest = { version = "0.12.7", features = [
    "blocking",
    "json",
    "rustls-tls",
    "stream",
], default-features = false }
reqwest_cookie_store = "0.7.0"
url = "2.5.2"
jsonwebtoken = "9.3.0"
axum-extra = { version = "0.9.3", features = ["typed-header"] }
once_cell = "1.19.0"
serde_with = "3.9.0"
bytes = "1.7.1"
prefix-hex = "0.7.1"
rand = "0.8.5"
ed25519-dalek = { version = "2.1.1", features = ["rand_core", "serde"] }
chrono = "0.4.38"
base64 = "0.22.1"
starknet-types-core = "~0.1.4"
futures = "0.3.30"
async-stream = "0.3.5"
cairo-proof-parser = {git = "https://github.com/cartridge-gg/cairo-proof-parser.git",rev = "f175d58"}
starknet-crypto = "0.7.0"
anyhow = "1.0.89"