[workspace]
resolver = "2"
members = [
    "prover",
    "common",
    "prover-sdk",
    "bin/cairo-prove",
    "bin/keygen",
    "bin/register",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.89"
async-stream = "0.3.5"
base64 = "0.22.1"
bytes = "1.7.1"
chrono = "0.4.38"
futures = "0.3.30"
jsonwebtoken = "9.3.0"
once_cell = "1.19.0"
prefix-hex = "0.7.1"
rand = "0.8.5"
reqwest_cookie_store = "0.7.0"
serde_json = "1.0.127"
serde_with = "3.9.0"
starknet-crypto = "0.7.0"
starknet-types-core = "~0.1.4"
tempfile = "3.12.0"
thiserror = "1.0.63"
tracing = "0.1.40"
url = "2.5.2"

axum = { version = "0.7.5", features = ["http2", "macros", "multipart", "ws"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
cairo-proof-parser = { git = "https://github.com/cartridge-gg/cairo-proof-parser.git", rev = "f175d58" }
clap = { version = "4.5.16", features = ["derive", "env"] }
common = { path = "common" }
ed25519-dalek = { version = "2.1.1", features = ["rand_core", "serde"] }
prover-sdk = { path = "prover-sdk" }
reqwest = { version = "0.12.7", features = [
    "blocking",
    "json",
    "rustls-tls",
    "stream",
], default-features = false }

serde = { version = "1.0.209", features = ["derive"] }
tokio = { version = "1.39.3", features = ["full"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
cairo-lang-sierra-type-size = { version = "2.7.0", default-features = false }
cairo-lang-sierra-ap-change = { version = "2.7.0", default-features = false }
cairo-vm = { git = "https://github.com/lambdaclass/cairo-vm.git", features = [
    "cairo-1-hints",
],rev = "93f1f54" }
num-bigint = { version = "0.4", default-features = false, features = [
    "serde",
    "rand",
] }
num-traits = { version = "0.2", default-features = false }
cairo-lang-casm = { version = "2.7.0", default-features = false }
cairo-lang-starknet-classes = { version = "2.7.0", default-features = false }
cairo-lang-sierra-to-casm = { version = "2.7.0", default-features = false }
cairo-lang-sierra = { version = "2.7.0", default-features = false }
cairo-lang-utils = { version = "2.7.0", default-features = false }
itertools = "0.12.1"