[package]
name = "prover-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest.workspace = true
url.workspace = true
thiserror.workspace = true
common.workspace = true
tracing.workspace = true
ed25519-dalek.workspace = true
prefix-hex.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest_cookie_store.workspace = true
base64.workspace = true
starknet-types-core.workspace = true
tokio.workspace = true
futures.workspace = true