[package]
name = "prover"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum.workspace = true
bytes.workspace = true
chrono.workspace = true
clap.workspace = true
common.workspace = true
curve25519-dalek.workspace = true
ed25519-dalek.workspace = true
jsonwebtoken.workspace = true
lazy_static.workspace = true
podman.workspace = true
prefix-hex.workspace = true
rand.workspace = true
serde_json.workspace = true
serde_with.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
utils.workspace = true
config-generator.workspace = true
