[package]
name = "prover"
version.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tempfile.workspace = true
serde.workspace = true
common.workspace = true
jsonwebtoken.workspace = true
axum-extra.workspace = true
once_cell.workspace = true
serde_with.workspace = true
bytes.workspace = true
prefix-hex.workspace = true
rand.workspace = true
ed25519-dalek.workspace = true
chrono.workspace = true
base64.workspace = true
starknet-types-core.workspace = true
futures.workspace = true
async-stream.workspace = true
swiftness_proof_parser.workspace = true
starknet-crypto.workspace = true
anyhow.workspace = true