[package]
name = "prover"
version.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tempfile.workspace = true
serde.workspace = true
common.workspace = true
jsonwebtoken.workspace = true
axum-extra.workspace = true
once_cell.workspace = true
serde_with.workspace = true
bytes.workspace = true
prefix-hex.workspace = true
rand.workspace = true
ed25519-dalek.workspace = true
chrono.workspace = true
base64.workspace = true
starknet-types-core.workspace = true
futures.workspace = true
async-stream.workspace = true
cairo-proof-parser.workspace = true
starknet-crypto.workspace = true
anyhow.workspace = true
cairo-vm.workspace = true
cairo-lang-sierra.workspace = true

bootloader_cairo-vm.workspace = true
cairo-lang-sierra-type-size.workspace = true
cairo-lang-sierra-ap-change.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
cairo-lang-casm.workspace = true
cairo-lang-starknet-classes.workspace = true
cairo-lang-sierra-to-casm.workspace = true
cairo-lang-utils.workspace = true
itertools.workspace = true
bincode = { version = "2.0.0-rc.3", default-features = false, features = [
    "serde",
] }

stone-prover-sdk.workspace = true
madara-prover-rpc-server.workspace = true
