[package]
name = "prover-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common.workspace = true

thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
hex.workspace = true
bytes.workspace = true
hyper-util.workspace = true
http.workspace = true
reqwest.workspace = true
rand.workspace = true
ed25519-dalek.workspace = true
reqwest_cookie_store.workspace = true
url.workspace = true

[dev-dependencies]
prover.workspace = true